<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp"
    android:background="@color/white"
    tools:context=".TestMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Test"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnI2C"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/i2c"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnAHT20"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/aht_20"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnBMP180"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/bmp_180"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnUVLight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/uv_light"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnAGS"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ags"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnAcetone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/acetone"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnH2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/h2"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnAllGases"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/all_gases"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnFullSystemCheck"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/full_system_check"
            android:textAllCaps="true"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="UselessLeaf" />

    <Button
        android:id="@+id/btnSubmitTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_test"/>

</LinearLayout>